welcome.lessons.welcome.array.array667.Array667.scala.error
array667:11: error: ';' expected but ',' found.
  return c1,c2
           ^